<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
	<RelativeLayout
		android:id="@+id/activity_more_info_to_print"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.sixtemia.gesbluedroid.activities.MoreInfoToPrintActivity"
		android:background="@android:color/white">

		<include
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			layout="@layout/toolbar" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingBottom="@dimen/activity_vertical_margin"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:background="@color/buscadorBackground"
			android:layout_below="@+id/toolbar">

			<com.sixtemia.sbaseobjects.views.SEditText
				android:id="@+id/etNumeroTiquet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/introdueixNumeroTiquet"/>

			<com.sixtemia.sbaseobjects.views.SEditText
				android:id="@+id/etData"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/IntrodueixLaData"/>

			<com.sixtemia.sbaseobjects.views.SEditText
				android:id="@+id/etImport"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:hint="@string/IntrodueixImport"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_alignParentBottom="true">

			<View style="@style/btnsInferiors_liniaSuperior" />

			<com.sixtemia.gesbluedroid.customstuff.views.SGBButton
				android:id="@+id/btnAcceptar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/imprimeix"
				style="@style/StepButton"/>

		</LinearLayout>

	</RelativeLayout>
</layout>