<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:background="@color/colorToolBar"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/esborra_tot_confimacio"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorToolBar"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            style="@style/ButtonDesactivat"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/SI"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:clickable="true"
            android:text="@string/NO"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>